--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,34 @@
+body {
+  background: url("../images/hero-bg.jpg"); }
+
+header .title {
+  font-size: 40px;
+  font-style: oblique;
+  font-weight: bolder;
+  text-align: center;
+  color: white; }
+
+header .search {
+  margin-bottom: 30px; }
+  header .search input {
+    border-radius: 15px; }
+  header .search button {
+    border-radius: 15px; }
+
+#beerInfo {
+  color: white;
+  padding: 10px; }
+
 .beer-div {
+  background: #ddd;
+  margin: 2px;
   cursor: pointer; }
 
 .beer-div img {
   height: 200px; }
 
-.slick-prev, .slick-next {
+.slick-prev,
+.slick-next {
   font-size: 15px;
   line-height: 0;
   position: absolute;
@@ -19,12 +43,11 @@
   background: transparent; }
 
 .slick-prev {
-  left: -60px; }
+  left: -60px;
+  color: white; }
 
 .slick-next {
-  right: -35px; }
-
-beer-div {
-  background: #333; }
+  right: -35px;
+  color: white; }
 
 /*# sourceMappingURL=style.css.map */
