--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,35 +1,54 @@
-header {
-  // background: url('../images/hero-bg.jpg');
-  // background-size: cover;
+body {
+  background: url("../images/hero-bg.jpg");
 }
-
-
+header .title {
+  font-size: 40px;
+  font-style: oblique;
+  font-weight: bolder;
+  text-align: center;
+  color: white;
+}
+header .search {
+  margin-bottom: 30px;
+  input {
+    border-radius: 15px;
+  };
+  button {
+    border-radius: 15px;
+  };
+}
+#beerInfo {
+  color: white;
+  padding: 10px;
+}
 .beer-div {
+  background: #ddd;
+  margin: 2px;
   cursor: pointer;
 }
 .beer-div img {
   height: 200px;
 }
-.slick-prev, .slick-next {
-    font-size: 15px;
-    line-height: 0;
-    position: absolute;
-    top: 50%;
-    display: block;
-    margin-top: -10px;
-    padding: 0;
-    cursor: pointer;
-    color: green;
-    border: none;
-    outline: none;
-    background: transparent;
+.slick-prev,
+.slick-next {
+  font-size: 15px;
+  line-height: 0;
+  position: absolute;
+  top: 50%;
+  display: block;
+  margin-top: -10px;
+  padding: 0;
+  cursor: pointer;
+  color: green;
+  border: none;
+  outline: none;
+  background: transparent;
 }
 .slick-prev {
   left: -60px;
+  color: white;
 }
 .slick-next {
   right: -35px;
-}
-beer-div {
-  background: #333;
+  color: white;
 }
