--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,7 +37,7 @@ header .search {
   font-size: 15px;
   line-height: 0;
   position: absolute;
-  top: 50%;
+  bottom: -30px;
   display: block;
   margin-top: -10px;
   padding: 0;
@@ -48,7 +48,7 @@ header .search {
   background: transparent;
 }
 .slick-prev {
-  left: -80px;
+  left: 0px;
   color: white;
   width: 80px;
   height: 2em;
@@ -56,7 +56,7 @@ header .search {
   border-radius: 15px;
 }
 .slick-next {
-  right: -65px;
+  right: 0px;
   color: white;
   width: 60px;
   height: 2em;
