--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@ $hoverColor : green;
 
 body {
   background: url("../images/hero-bg.jpg");
+  background-size: cover;
 }
 header .title {
   font-size: 40px;
