--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,6 +43,16 @@ header input:focus  {
   border: 2px solid #DDD;
   box-shadow: 2px 2px 2px #333;
 }
+#beerInfo .beer-name {
+  font-size: 28px;
+}
+#beerInfo h5 {
+  font-size: 16px;
+}
+
+#beerContainer h5 {
+  color: #777;
+}
 .beer-div {
   background: #bca;
   padding: 10px;
