--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,13 @@ header input:focus  {
 }
 #beerInfo h5 {
   font-size: 16px;
+  font-weight:lighter;
+  letter-spacing: 3px;
+}
+#beerInfo p {
+  letter-spacing: 1.5px;
+  font-style: oblique;
+  color: #CCC;
 }
 
 #beerContainer h5 {
