--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@ $hoverColor : green;
 body {
   background: url("../images/hero-bg.jpg");
   background-size: cover;
+  min-height: 720px;
 }
 header .title {
   font-size: 40px;
@@ -42,6 +43,7 @@ header input:focus  {
 #beerInfo.border {
   border: 2px solid #DDD;
   box-shadow: 2px 2px 2px #333;
+  margin-bottom: 20px;
 }
 #beerInfo .beer-name {
   font-size: 28px;
