--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,7 +15,7 @@ $hoverColor : green;
 body {
   background: url("../images/hero-bg.jpg");
   background-size: cover;
-  min-height: 720px;
+  height: 100%;
 }
 header .title {
   font-size: 40px;
