--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   background: url("../images/hero-bg.jpg");
   background-size: cover;
-  min-height: 720px; }
+  height: 100%; }
 
 header .title {
   font-size: 40px;
