--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,9 @@ $hoverColor : green;
   background: transparent;
   border-radius: 15px;
 }
-
+html {
+  height: 100%;
+}
 body {
   background: url("../images/hero-bg.jpg");
   background-size: cover;
